--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -144,7 +144,6 @@ allow 149.102.153.38;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.44.47;
-allow 151.216.64.56;
 allow 152.32.181.53;
 allow 152.32.199.79;
 allow 152.32.206.127;
@@ -627,7 +626,6 @@ allow 2001:4b20:12:f001::105;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
-allow 2001:678:9ec:34:1261:e54:9f85:d5ec;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -849,8 +847,6 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 216.239.90.19;
-allow 216.73.159.101;
-allow 216.73.159.75;
 allow 217.12.221.131;
 allow 217.199.199.250;
 allow 220.135.36.173;
@@ -947,6 +943,7 @@ allow 2.58.56.35;
 allow 2.58.56.43;
 allow 2.58.56.93;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
+allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
@@ -1445,7 +1442,6 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1758,6 +1754,7 @@ allow 66.78.40.182;
 allow 66.94.111.228;
 allow 67.219.109.141;
 allow 71.19.144.106;
+allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
 allow 72.5.43.62;
@@ -1845,7 +1842,6 @@ allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
