--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -144,6 +144,7 @@ allow 149.102.153.38;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.44.47;
+allow 151.216.64.56;
 allow 152.32.181.53;
 allow 152.32.199.79;
 allow 152.32.206.127;
@@ -246,7 +247,6 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -282,7 +282,6 @@ allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
-allow 185.183.192.147;
 allow 185.191.204.254;
 allow 185.193.52.180;
 allow 185.195.71.244;
@@ -579,7 +578,7 @@ allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
-allow 198.167.206.206;
+allow 198.167.206.230;
 allow 198.46.166.157;
 allow 198.50.212.160;
 allow 198.58.107.53;
@@ -626,6 +625,7 @@ allow 2001:4b20:12:f001::105;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
 allow 2001:638:301:f732::150;
+allow 2001:678:9ec:34:9d82:4fc1:8673:fea4;
 allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
@@ -1232,7 +1232,6 @@ allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
-allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:5ccf:50ef:cafe:babe:1337;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
@@ -1256,7 +1255,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1442,6 +1440,7 @@ allow 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1710,7 +1709,6 @@ allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.110.120;
 allow 5.255.111.64;
-allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.151;
@@ -1785,7 +1783,6 @@ allow 82.221.139.190;
 allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.228.94.69;
-allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
@@ -1836,12 +1833,14 @@ allow 91.219.236.91;
 allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
+allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
